collapse fix

--- a/src/styles/components/_collapse.scss
+++ b/src/styles/components/_collapse.scss
@@ -4,11 +4,11 @@
     display: flex;
  
     &__content {
-        flex-direction: column;
         background-color:  rgb(246, 246, 246);
         color: $primary-color;
         border-radius: 0px 0px 5px 0px;
         padding-left: 15px;
+  
     }
 
 
